--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                                     <span>0€</span>
                                 </li>
                                 <li>
-                                    <span>Total</span>
-                                    <span>0€</span>
+                                    <span >Total</span>
+                                    <span >0</span>€
                                 </li>
                             </ul>
                             <div class="buttons">
@@ -660,9 +660,9 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -715,9 +715,9 @@
                            ipod Nano</p>
                       </div>
                       <div class="price">
-                          <p class="prices">
-                              95.72€
-                            </p>
+                          <span class="prices">
+                              95.72
+                            </span>€
                       </div>
                       <div class="add_cart">
                           Add To Cart
@@ -827,9 +827,9 @@
                             HP LP3065</p>
                       </div>
                       <div class="price">
-                          <p class="prices">
-                              95.72€
-                            </p>
+                          <span class="prices">
+                              95.72
+                            </span>€
                       </div>
                       <div class="add_cart">
                           Add To Cart
@@ -938,7 +938,7 @@
                       </div>
                       <div class="price">
                         
-                              <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
+                              <span style="color: gray;">95.72€</span><span  class="prices">29.81</span>€
                         
                       </div>
                       <div class="add_cart">
@@ -1047,7 +1047,7 @@
                              Apple Cinema 30</p>
                       </div>
                       <div class="price">
-                        <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
+                        <span style="color: gray;">95.72€</span><span  class="prices">29.81</span>€
                       </div>
                       <div class="add_cart">
                           Add To Cart
@@ -1109,9 +1109,9 @@
                                 iPod Nano</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1164,9 +1164,9 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1221,9 +1221,9 @@
                                 Ipod Shuffle</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1276,9 +1276,9 @@
                               Hp LP3065</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1333,9 +1333,9 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1388,9 +1388,9 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1445,9 +1445,9 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1500,9 +1500,9 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1557,9 +1557,9 @@
                                  Sony Vaio</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  943.72€
-                                </p>
+                              <span class="prices">
+                                  943.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1612,9 +1612,9 @@
                                Samsung SyncMaster 941BW</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1669,9 +1669,9 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1724,9 +1724,9 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1783,9 +1783,9 @@
                                  Canon EOS 5D</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1838,7 +1838,7 @@
                                Imac</p>
                         </div>
                         <div class="price">
-                            <span style="color: gray;">95.72€</span><span  class="prices">39.81€</span>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.81</span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -1893,7 +1893,7 @@
                                 Vivo 8pro</p>
                           </div>
                           <div class="price">
-                            <span style="color: gray;">95.72€</span><span  class="prices">19.81€</span>
+                            <span style="color: gray;">95.72€</span><span  class="prices">19.81</span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -1946,7 +1946,7 @@
                                ipod Touch</p>
                         </div>
                         <div class="price">
-                            <span style="color: gray;">95.72€</span><span  class="prices">29.81€</span>
+                            <span style="color: gray;">95.72€</span><span  class="prices">29.81</span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -2001,9 +2001,9 @@
                                  Sony Vaio</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  943.72€
-                                </p>
+                              <span class="prices">
+                                  943.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -2056,9 +2056,9 @@
                                Samsung SyncMaster 941BW</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -2113,9 +2113,9 @@
                                  Apple Cinema 30</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -2168,9 +2168,9 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -2225,9 +2225,9 @@
                                 iPod Nano</p>
                           </div>
                           <div class="price">
-                              <p  class="prices">
-                                  95.72€
-                                </p>
+                              <span  class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -2280,9 +2280,9 @@
                               HTC Touch HD</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -2337,9 +2337,9 @@
                                 Ipod Shuffle</p>
                           </div>
                           <div class="price">
-                              <p class="prices">
-                                  95.72€
-                                </p>
+                              <span class="prices">
+                                  95.72
+                                </span>€
                           </div>
                           <div class="add_cart">
                               Add To Cart
@@ -2392,9 +2392,9 @@
                               Hp LP3065</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
