back is add display done

--- a/cart.html
+++ b/cart.html
@@ -393,6 +393,21 @@
          </div>
           </div>
         </section>
+        <section id="empty" class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Your shopping cart is empty!</p>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="buttons d-flex justify-content-end" >
+                            <button class="first_btn"><a class="text-white text-decoration-none" href="./index.html">Continue</a></button> 
+                          </div>
+                    </div>
+                   
+                </div>
+            </div>
+        </section>
         <section id="accordions">
             <div class="container">
                 <div class="title">
