--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                                 </li>
                                 <li>
                                     <span >Total</span>
-                                    <span >0</span>€
-                                </li>
+                                    <span><span class="total_price">0</span><span></span>€</span>
+                                </li >
                             </ul>
                             <div class="buttons">
                                 <button><a class="text-white text-decoration-none" href="./cart.html">View Cart</a></button>
@@ -268,7 +268,7 @@
                                 </li>
                                 <li>
                                     <span>Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_price">0</span><span></span>€</span>
                                 </li>
                             </ul>
                             <div class="buttons">
@@ -772,9 +772,9 @@
                               ipod Shuffle</p>
                         </div>
                         <div class="price">
-                            <p class="prices">
-                                95.72€
-                              </p>
+                            <span class="prices">
+                                95.72    
+                              </span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -884,7 +884,7 @@
                               iMAC</p>
                         </div>
                         <div class="price">
-                            <span style="color: gray;">95.72€</span><span  class="prices">39.21€</span>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.21</span>€
                         </div>
                         <div class="add_cart">
                             Add To Cart
@@ -994,7 +994,7 @@
                                Apple Cinema 30</p>
                         </div>
                         <div class="price">
-                            <span style="color: gray;">95.72€</span><span  class="prices">39.81€</span>
+                            <span style="color: gray;">95.72€</span><span  class="prices">39.81</span> €
                         </div>
                         <div class="add_cart">
                             Add To Cart
