--- a/login.html
+++ b/login.html
@@ -138,9 +138,9 @@
                                     <span>0€</span>
                                 </li>
                                 <li>
-                                    <span>Total</span>
-                                    <span>0€</span>
-                                </li>
+                                    <span >Total</span>
+                                    <span><span class="total_price">0</span><span></span>€</span>
+                                </li >
                             </ul>
                             <div class="buttons">
                                 <button><a class="text-white text-decoration-none" href="./cart.html">View Cart</a></button>
@@ -271,7 +271,7 @@
                                 </li>
                                 <li>
                                     <span>Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_price">0</span><span></span>€</span>
                                 </li>
                             </ul>
                             <div class="buttons">
@@ -351,7 +351,7 @@
             </ul>
         </div>
         <div class="back">
-            
+
         </div>
     </header>
     <main>
