--- a/registration.html
+++ b/registration.html
@@ -136,9 +136,9 @@
                                     <span>0€</span>
                                 </li>
                                 <li>
-                                    <span>Total</span>
-                                    <span>0€</span>
-                                </li>
+                                    <span >Total</span>
+                                    <span><span class="total_price">0</span><span></span>€</span>
+                                </li >
                             </ul>
                             <div class="buttons">
                                 <button><a class="text-white text-decoration-none" href="./cart.html">View Cart</a></button>
@@ -269,7 +269,7 @@
                                 </li>
                                 <li>
                                     <span>Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_price">0</span><span></span>€</span>
                                 </li>
                             </ul>
                             <div class="buttons">
@@ -349,7 +349,7 @@
             </ul>
         </div>
         <div class="back">
-            
+
         </div>
     </header>
     <main>
