project 90% is done

--- a/cart.html
+++ b/cart.html
@@ -536,10 +536,10 @@
                               </li>
                             </ul>
                             <ul>
-                                <li><span>$<span>0</span></span></li>
-                                <li><span>$<span>0</span></span></li>
-                                <li><span>$<span>0</span></span></li>
-                                <li><span>$<span>0</span></span></li>
+                                <li><span>0</span>€</span></li>
+                                <li><span>0<span>€</span></span></li>
+                                <li><span>0<span>€</span></span></li>
+                                <li><span class="total_price">0</span><span>€</span></li>
                             </ul>
                           </div>
                     </div>
