--- a/htcTouch.html
+++ b/htcTouch.html
@@ -369,25 +369,25 @@
                 <div class="col-lg-7 col-md-7">
                     <div class="devices_drone">
                         <div class="image">
-                            <img src="./assets/images/12-1000x1000.jpg" alt="">
+                            <img data-enlargable src="./assets/images/12-1000x1000.jpg" alt="">
                         </div>
                         <div class="responsive">
                             <div class="item">
-                                <img src="./assets/images/18-370x370.jpg" alt="">
+                                <img data-enlargable src="./assets/images/18-370x370.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img src="./assets/images/16-370x370.jpg" alt="">
+                                <img data-enlargable src="./assets/images/16-370x370.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img src="./assets/images/10-370x370.jpg" alt="">
+                                <img data-enlargable src="./assets/images/10-370x370.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img src="./assets/images/16-370x370 (1).jpg" alt="">
+                                <img data-enlargable src="./assets/images/16-370x370 (1).jpg" alt="">
                             </div>
                             <div class="item">
-                                <img src="./assets/images/16-370x370.jpg" alt="">
+                                <img data-enlargable src="./assets/images/16-370x370.jpg" alt="">
                             </div>
-                            
+                          
                         </div>
                         <div class="accordions">
                             <div class="htc_ctgr my-2">
@@ -558,7 +558,7 @@
                             </div>
                             <div class="description d-none">
                                 <p class="title ">
-                                  ipod Shuffle</p>
+                                    HTC Touch HD</p>
                             </div>
                             <div class="price d-none">
                                 <p class="prices">
