cart js changed and total,sub,aco,vat price is done

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
         <title>cart</title>
     </head>
 <body>
-    <header id="head">
+    <header id="head" class="bg-white">
         <div class="container-fluid  big-size-container justify-content-between align-items-center d-lg-block d-none">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-3">
@@ -124,19 +124,19 @@
                             <ul class="list-unstyled ">
                                 <li>
                                     <span>Sub-Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_sub">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Eco Tax(-2.00)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_eco">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>VAT (20%)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_vat">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span >Total</span>
-                                    <span><span class="total_price">0</span><span></span>€</span>
+                                    <span><span class="total_price">0</span><span>€</span></span>
                                 </li >
                             </ul>
                             <div class="buttons">
@@ -256,19 +256,19 @@
                             <ul class="list-unstyled ">
                                 <li>
                                     <span>Sub-Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_sub">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Eco Tax(-2.00)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_eco">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>VAT (20%)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_vat">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Total</span>
-                                    <span><span class="total_price">0</span><span></span>€</span>
+                                    <span><span class="total_price">0</span><span>€</span></span>
                                 </li>
                             </ul>
                             <div class="buttons">
@@ -536,9 +536,9 @@
                               </li>
                             </ul>
                             <ul>
-                                <li><span>0</span>€</span></li>
-                                <li><span>0<span>€</span></span></li>
-                                <li><span>0<span>€</span></span></li>
+                                <li><span class="total_sub">0</span><span>€</span></li>
+                                <li><span class="total_eco">0</span><span>€</span></li>
+                                <li><span class="total_vat">0</span><span>€</span></li>
                                 <li><span class="total_price">0</span><span>€</span></li>
                             </ul>
                           </div>
