--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
                             <ul class="list-unstyled ">
                                 <li>
                                     <span>Sub-Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_sub">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Eco Tax(-2.00)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_eco">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>VAT (20%)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_vat">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span >Total</span>
-                                    <span><span class="total_price">0</span><span></span>€</span>
+                                    <span><span class="total_price">0</span><span>€</span></span>
                                 </li >
                             </ul>
                             <div class="buttons">
@@ -256,19 +256,19 @@
                             <ul class="list-unstyled ">
                                 <li>
                                     <span>Sub-Total</span>
-                                    <span>0€</span>
+                                    <span><span class="total_sub">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Eco Tax(-2.00)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_eco">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>VAT (20%)</span>
-                                    <span>0€</span>
+                                    <span><span class="total_vat">0</span><span>€</span></span>
                                 </li>
                                 <li>
                                     <span>Total</span>
-                                    <span><span class="total_price">0</span><span></span>€</span>
+                                    <span><span class="total_price">0</span><span>€</span></span>
                                 </li>
                             </ul>
                             <div class="buttons">
