base section click add animated

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
         <title>cart</title>
     </head>
 <body>
-    <header id="head" class="bg-white">
+    <header id="head" class="bg-light-subtle">
         <div class="container-fluid  big-size-container justify-content-between align-items-center d-lg-block d-none">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-3">
