--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <img src="./assets/images/Slider-1-1920x925.png" alt="" />
             </div>
             <div class="droneInfo animate__animated">
-              <div class="title-text animate__animated animate__fadeInDown mt-lg-5 pt-lg-5">
+              <div class="title-text animate__animated  mt-lg-5 pt-lg-5">
                 <h2 class="pt-3">Clear 4k Camera</h2>
                 <h1>Underwater Drone</h1>
                 <p>
@@ -369,8 +369,8 @@
                   modi distinctio sed quasi cupiditate hic sequi aliquid maxime.
                 </p>
               </div>
-              <div class="droneButton animate__animated animate__fadeInDown mt-lg-5">
-                <button class="btn btn-light">SHOP NOW</button>
+              <div class="droneButton animate__animated  mt-lg-5">
+                <a class="text-decoration-none text-white" href="#latest"><button class="btn btn-light">SHOP NOW</button></a>
               </div>
             </div>
           </div>
@@ -379,7 +379,7 @@
               <img src="./assets/images/Slider-2-1920x925.png" alt="" />
             </div>
             <div class="droneInfo animate__animated">
-              <div class="title-text animate__animated animate__fadeInDown mt-lg-5 pt-lg-5">
+              <div class="title-text animate__animated  mt-lg-5 pt-lg-5">
                 <h2 class="pt-3">Clear 4k Camera</h2>
                 <h1>Fast Drone Delivery</h1>
                 <p>
@@ -387,8 +387,8 @@
                   modi distinctio sed quasi cupiditate hic sequi aliquid maxime.
                 </p>
               </div>
-              <div class="droneButton animate__animated animate__fadeInDown mt-lg-5">
-                <button class="btn btn-light">SHOP NOW</button>
+              <div class="droneButton animate__animated  mt-lg-5">
+                <a class="text-decoration-none text-white" href="#latest"><button class="btn btn-light">SHOP NOW</button></a>
               </div>
             </div>
           </div>
@@ -1060,7 +1060,7 @@
          
          
               </div>
-            <div class="second_crsl _latest owl-carousel owl-theme" style="transition: 0.5s;">
+            <div class="second_crsl _latest owl-carousel owl-theme" style="transition: 0.5s; display: none;">
 
                 <div class="item">
                     <div class="device" data-id="9">
@@ -1735,7 +1735,7 @@
                  </div>
                   </div> 
          </div>
-              <div class="third_crsl _latest owl-carousel owl-theme"  style="transition: 0.5s;" >
+              <div class="third_crsl _latest owl-carousel owl-theme"  style="transition: 0.5s; display: none;" >
                 <div class="item">
                     <div class="device" data-id="17">
                       <div class="image">
