header scrool is done

--- a/collections.html
+++ b/collections.html
@@ -18,7 +18,7 @@
         <title>Collection</title>
     </head>
 <body>
-    <header id="head">
+    <header id="head" class="active">
         <div class="container-fluid  big-size-container justify-content-between align-items-center d-lg-block d-none">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-3">
@@ -34,26 +34,26 @@
                         <ul class="list-unstyled d-flex justify-content-center align-items-center">
                             <li class="drone"><a class="li_a text-decoration-none" href="">Drone</a>
                                 <div class="drone-menu d-flex">
-                                    <div class="indoor menu p-3 ">
+                                    <div class="indoor menu">
                                         <h5 class="text-center ">Indoor Toy <hr></h5>
-                                        <ul class="list-unstyled drone_menu_ul p-3">
+                                        <ul class="list-unstyled drone_menu_ul">
                                             <li>Parrot Mambo</li>
                                             <li>Pontensic A20W</li>
                                             <li>Ryze Tello</li>
                                         </ul>
                                  
                                     </div>
-                                    <div class="kids menu p-3">
+                                    <div class="kids menu">
                                         <h5 class="text-center">Kids Entartainment <hr></h5>
-                                        <ul class="list-unstyled drone_menu_ul p-3">
+                                        <ul class="list-unstyled drone_menu_ul">
                                             <li>Holly Stone</li>
                                             <li>Hubsan Toy</li>
                                             <li>Motion Controlled</li>
                                         </ul>
                                     </div>
-                                    <div class="photography menu p-3 ">
+                                    <div class="photography menu">
                                         <h5 class="text-center">Photography<hr></h5>
-                                        <ul class="list-unstyled p-3 ">
+                                        <ul class="list-unstyled">
                                             <li>Autel Evo</li>
                                             <li>Dji Mavic</li>
                                             <li>PowerEgg X Wizard</li>
@@ -65,18 +65,18 @@
                             </li>
                             <li  class="accesories"><a class="li_a text-decoration-none" href="">Accesories</a>
                                 <div class="accesories-menu  d-flex">
-                                    <div class="indoor menu p-3">
+                                    <div class="indoor menu">
                                         <h5 class="text-center">Ryze Tello <hr></h5>
-                                        <ul class="list-unstyled accesories_menu_ul p-3">
+                                        <ul class="list-unstyled accesories_menu_ul">
                                             <li>PowerVision</li>
                                             <li>PowerVision Wizard</li>
                                             <li>Snaptain Sp500</li>
                                         </ul>
                                  
                                     </div>
-                                    <div class="kids menu p-3">
+                                    <div class="kids menu">
                                         <h5 class="text-center">Force 1 Scoot LED<hr></h5>
-                                        <ul class="list-unstyled accesories_menu_ul p-3 ">
+                                        <ul class="list-unstyled accesories_menu_ul">
                                             <li>DJI Mini</li>
                                             <li>EMAX TinyHawk</li>
                                             <li>Potensic A20</li>
